--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dual N Back</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
